<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorMain"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity$MainFragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="22sp"
        android:text="@string/my_title" />

    <Button
        android:id="@+id/button_movies"
        style="@style/Button"
        android:textSize="18sp"
        android:text="@string/popular_movies" />

    <Button
        android:id="@+id/button_stock"
        style="@style/Button"
        android:text="@string/stock_hawk" />

    <Button
        android:id="@+id/button_bigger"
        style="@style/Button"
        android:text="@string/build_it" />

    <Button
        android:id="@+id/button4"
        style="@style/Button"
        android:text="@string/materialize" />

    <Button
        android:id="@+id/button_ubiquitois"
        style="@style/Button"
        android:text="@string/ubiquitous" />

    <Button
        android:id="@+id/button_capstone"
        style="@style/Button"
        android:text="@string/capstone" />

</LinearLayout>
